# jax_rl_util

./: .gitignore  CITATION.cff  README.md  optimizers.py  pyproject.toml
artifacts/baselines/spring/: ant.ckpt  humanoid.ckpt  pusher.ckpt  reacher.ckpt
baselines/: brax_baselines.py  bsuite_baselines.py  gymnax_metarl.py  ppo_agent.py  ppo_rnn.py  ppo_s5.py  rnns_haiku.py  s5.py
data/eval/: wandb_runs.csv
envs/: __init__.py  continuous_cartpole.py  dronegym.py  env_util.py  environments.py  plot_drones.py  tribead.py  wrappers.py
eval/: aim_lineplot.py  make_boxplot.py  make_latex_table.py  wandb_to_csv.py
jax_rl_util/: __init__.py  optimizers.py
jax_rl_util/baselines/: __init__.py  brax_baselines.py  gymnax_metarl.py  ppo_agent.py  ppo_rnn.py  ppo_s5.py  rnns_haiku.py  s5.py
jax_rl_util/baselines/trained/brax_baselines/generalized/: ant.ckpt  halfcheetah.ckpt  humanoid.ckpt  humanoidstandup.ckpt  inverted_double_pendulum.ckpt  inverted_pendulum.ckpt  pusher.ckpt  reacher.ckpt
jax_rl_util/baselines/trained/brax_baselines/mjx/: ant.ckpt  halfcheetah.ckpt  humanoidstandup.ckpt  inverted_double_pendulum.ckpt  inverted_pendulum.ckpt  pusher.ckpt  reacher.ckpt
jax_rl_util/baselines/trained/brax_baselines/positional/: ant.ckpt  halfcheetah.ckpt  humanoid.ckpt  humanoidstandup.ckpt  inverted_double_pendulum.ckpt  inverted_pendulum.ckpt  pusher.ckpt  reacher.ckpt
jax_rl_util/envs/: __init__.py  barkour.py  continuous_cartpole.py  dronegym.py  env_util.py  environments.py  plot_drones.py  wrappers.py
jax_rl_util/eval/: aim_lineplot.py  delete_aim_runs.py  eval_util.py  make_boxplot.py  make_latex_table.py  make_lineplot.py  plot_wandb_csv.py  wandb_to_csv.py
jax_rl_util/td_lambda/: rnn_ac.py  traces.py
jax_rl_util/util/: __init__.py  logging_util.py  rollouts.py
util/: logging_util.py  rollouts.py
(+5 files in other folders)
