[tool.poetry]
name = "jax-rl-util"
version = "0.1.0"
description = ""
authors = ["julian <julian.lemmel@tuwien.ac.at>"]
readme = "README.md"
packages = [{ include = "envs" }, { include = "util" }]

[tool.poetry.dependencies]
python = "^3.9"
gymnasium = { version = "^0.29.1", extras = ["box2d"] }
brax = "^0.10.5"
gymnax = "^0.0.8"
popjym = { git = "https://github.com/EdanToledo/popjym.git", branch = "main" }
simple-parsing = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
