[tool.poetry]
name = "jax-rl-util"
version = "0.1.0"
description = ""
authors = ["julian <julian.lemmel@tuwien.ac.at>"]
readme = "README.md"
packages = [{ include = "envs" }, { include = "util" }, { include = "baselines"}]

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "^1.0.0"
brax = "^0.11.0"
gymnax = "^0.0.8"
popjym = { git = "https://github.com/EdanToledo/popjym.git", branch = "main" }
simple-parsing = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
