[tool.poetry]
name = "jax_rl_util"
version = "0.1.0"
description = ""
authors = ["Julian Lemmel <julian.lemmel@tuwien.ac.at>"]
readme = "README.md"
packages = [{include = "jax_rl_util"}]

[tool.poetry.dependencies]
python         = ">=3.10,<4.0"
gymnasium      = "^1.0.0"
brax           = "^0.12.1"
flashbax       = "^0.1.3"
gymnax         = "^0.0.8"
popjym         = { git = "https://github.com/EdanToledo/popjym.git", branch = "main" }
mujoco_menagerie         = { git = "https://github.com/google-deepmind/mujoco_menagerie", branch = "main" }
simple-parsing = "^0.1.6"


[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
